# limbed-robot-control

./: Gravity_compensation.m  LEG_LFGRIPPER.urdf  LimberoGrieel_Leg_DH_Modeling_Control.m  LimberoGrieel_Leg_Manipulability_Test.m  LimberoGrieel_Manipulability_Develop.m  LimberoGrieel_Manipulability_Develop_limits.m  LimberoGrieel_Manipulability_Develop_mesh.m  LimberoGrieel_Robot_Control.slx  LimberoGrieel_Robot_Control.slxc  LimberoGrieel_Robot_Manipulaibilty_Test1.m  LimberoGrieel_Robot_Manipulaibilty_Test2.m  NewLimbManipulabilityTest.m  NewRobot_Manipulability_Develop.m  NewRobot_Manipulability_Develop_limits.m  NewRobot_Manipulability_Test.m  PositionPI_limberoGrieel_leg_control_DH.slx  README.md  Robot_DH.m  Robot_DH_kin.asv  Robot_DH_kin.m  Robot_DH_test.m  Robot_model.m  check_contact_limbs.m  compute_base_ellipsoid.m  compute_base_ellipsoid_scaled.m  compute_grasp_matrix.m  femur.STL  limb_ellipsoids.m  limb_end.STL  limb_root.STL  limberoGrieel_leg_DH.asv  limberoGrieel_leg_DH.m  limberoGrieel_leg_manipulability.asv  limberoGrieel_leg_manipulability.m  limberoGrieel_model_DH.m  limberoGrieel_robot_DH.m  limbero_controller.mat  limbero_grieel_dh.m  move_limb.m  plotEllipsoid.m  (+6 more)
kin_analysis/: CMakeLists.txt  package.xml
kin_analysis/include/kin_analysis/: kin_DH_parameters.hpp  kin_analysis.hpp
kin_analysis/src/: kin_analysis.cpp
robotics-toolbox-examples/: Ellipses.m  dynamics_control.m  position_orientation.m  robot_arm_kin.m  robot_arm_kin_advanced.m  time_motion.m  velocity_relationship.m
urdf/: BASE_LEG_LFGRIPPER.urdf  BASE_LEG_LFWHEEL.urdf  (+11 more)
(+4 files in other folders)
